# VSCppEase

./: LICENSE  README.md
profiles/: C-CPP BackEnd.code-profile  base.code-profile  base_settings.jsonc
projects/gRPC_example/: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.nu  build_with_conan.sh  conanfile.py  vcpkg.json
projects/gRPC_example/.vsconan/: config.json
projects/gRPC_example/docs/: Doxyfile
projects/gRPC_example/includes/client/: calculator_client.hpp  greeter_client.hpp
projects/gRPC_example/includes/server/: calculator_service.hpp  greeter_service.hpp  server.hpp
projects/gRPC_example/protos/: CMakeLists.txt  calculator.proto  hello.proto
projects/gRPC_example/src/: CMakeLists.txt
projects/gRPC_example/src/client/: calculator_client.cpp  greeter_client.cpp  main.cpp
projects/gRPC_example/src/server/: calculator_service.cpp  greeter_service.cpp  main.cpp  server.cpp
projects/gRPC_example/tests/: CMakeLists.txt
projects/gRPC_example/tests/client/: test_calculator_client.cpp  test_greeter_client.cpp
projects/gRPC_example/tests/server/: test_calculator_service.cpp  test_greeter_service.cpp
